--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ instagram:
 linkedin: 
 
 # avatar and Favicon
-avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
-favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
+avatar: /files/IMG_7890.JPG
+favicon: 
 
 # disqus config
 disqus:
