--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ weibo: pzhjie
 github: pzj
 instagram: 
 linkedin: 
-zhihu: people/peng-zhang-jie-68
+#zhihu: people/peng-zhang-jie-68
 
 # avatar and Favicon
 avatar: /files/IMG_7890.JPG
