--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ filter: 'category'
 recent_num: 20
 
 # Social account
-twitter: _Hungry__
+twitter: CodeHungry
 weibo: pzhjie
 github: pzj
 instagram: 
