--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: pzhjie@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   章杰的博客
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://pzhjie.com # the base hostname & protocol for your site
+url: https://pzhjie.com # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
 author: PengZhangJie
 
