--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: >-                        # used by seo meta and the atom feed
   欢迎访问章杰的博客
 
 # fill in the base hostname & protocol for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://pzhjie.com/'
 
 author: pzhjie                  # change to your full name
 
